fixed spacing, small styles, and added a popover

--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -62,7 +62,7 @@
     margin-top:10px;
     margin-left:0;
     margin-right:15px;
-    padding: 10px;
+    padding: 8px;
     height:40px;
     width:40px;
     background-color: #febd69; 
@@ -86,6 +86,41 @@
     margin-right: 25px;
 }
 
+.login h5{
+    color: white;
+    font-size: small;
+    margin-bottom: 1px;
+}
+.login h4{
+    margin-top:0;
+    font-size: 1.3em;
+}
+
+.flag{
+    display:flex;
+    flex-direction: column;
+    margin-right: 25px;
+
+}
+
+.flag p{
+    color: white;
+    font-size: smaller;
+    margin-bottom: 0;
+}
+
+.galf{
+    height:1.5em;
+    width: 2em;
+    background-color: #131921;
+    background-size: cover;
+    background-image: url("../public/images/flag.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    margin-top:0;
+
+}
+
 .shoppingCart {
     display:flex;
     flex-direction:column;
@@ -99,6 +134,26 @@
     width:100%;
     align-self: center;
 }
+
+.btnAddCart {
+    border-radius: 20px;
+    background: #FFD814;
+    border-color: #FCD200;
+    text-align: center;
+    vertical-align: middle;
+    border-style: solid;
+    border-width: 1px;
+    height: 100%;
+    width: 100%;
+    left: 0;
+    top: 0;
+    line-height: 19px;
+    margin-bottom: 10px;
+    margin-top: 5px;
+    cursor: pointer;
+    box-shadow: 0 2px 5px 0 rgb(213 217 217 / 50%);
+}
+.btnAddCart:hover {background-color: #f4cb00}
 
 
 
@@ -134,10 +189,23 @@
 
 .li{
     color:white !important;
-    justify-content:baseline;
+    justify-content:center;
     margin-top:2px;
     margin-bottom:2px;
     margin-left:20px;
+    height:fit-content;
+    width:fit-content;
+}
+
+.li:hover{
+    border-style: solid;
+    border-width: 1px;
+    border-color:#fff;
+    border-radius: 2px;
+}
+
+.li a {
+    border-style: none !important;
 }
 
 .iconlist{
